# zea

./: pyproject.toml
.github/workflows/: tests.yaml
docs/source/: environment.rst  getting-started.rst
docs/source/notebooks/agent/: agent_example.ipynb
docs/source/notebooks/data/: zea_data_example.ipynb  zea_simulation_example.ipynb
docs/source/notebooks/models/: diffusion_model_example.ipynb
docs/source/notebooks/pipeline/: dbua_example.ipynb
tests/: conftest.py  test_beamformer.py  test_notebooks.py  test_operations.py
tests/data/: test_conversion_scripts.py  test_dataset.py
zea/: io_lib.py
zea/agent/: selection.py
zea/backend/: optimizer.py
zea/beamform/: beamformer.py  delays.py
zea/data/: __init__.py  __main__.py  data_format.py  datasets.py
zea/data/convert/: __main__.py  camus.py  cetus.py  utils.py
zea/ops/: __init__.py  ultrasound.py
